--- a/quiz/templates/single_complete.html
+++ b/quiz/templates/single_complete.html
@@ -12,7 +12,7 @@
 {% if user.is_authenticated %}
   <p>{% trans "You have already sat this exam and only one sitting is permitted" %}.</p>
 {% else %}
-  <p>{% trans "This exam is only accessible to signed in users" %}.</p>
+  <p>{% trans "This exam is only accessible to signed in users" %}. <a href="/accounts/login/">Login</a></p>
 {% endif %}
 
 {% endblock %}
