--- a/quiz/templates/base.html
+++ b/quiz/templates/base.html
@@ -8,16 +8,41 @@
 <meta name="description" content="{% block description %}{% endblock %}">
 
 <!-- styles -->
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
+<style>
+    .navbar-text {
+        color: black !important;
+        margin-left: 10px;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+</style>
+
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 p-3" style="display: flex;">
+        <a class="navbar-brand" href="/" style="flex-grow: 1;">Quiz App</a>
+        <div id="navbarText">
+            {% if user.is_authenticated %}
+                <span class="navbar-text">{{user.email}}<span>
+                <a href="{% url 'account_logout' %}"><span class="btn btn-secondary navbar-text">Log Out<span></a>
+            {% else %}
+                <a href="{% url 'account_login' %}"><span class="btn btn-secondary navbar-text">Log In<span></a>
+                <a href="{% url 'account_signup' %}"><span class="btn btn-secondary navbar-text">Sign Up<span></a>
+            {% endif %}
+        </div>
+      </nav>
 
 
 <!-- Before the quiz content -->
